# ceia-nlp2

./: README.md  pyproject.toml
notebooks/: TP1_TinyGPT.ipynb
src/: cv_streamlit_app.py  cvagent_streamlit_app.py  pinecone_registry.py
