[tool.poetry]
name = "nlp2_tps"
version = "0.1.0"
description = ""
authors = ["Braian Desia"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
torch = {version = "2.6.0+cpu", source = "pytorch-cpu"}
dotenv = "^0.9.9"
groq = "^0.36.0"
pinecone = "^8.0.0"
pypdf = "^6.4.0"
nltk = "^3.9.2"
sentence-transformers = "^5.1.2"
langchain = "^1.1.0"
langchain-community = ">=0.3.2,<0.4.0"
tiktoken = "^0.12.0"
langchain-text-splitters = ">=0.3.0,<1.0.0"
transformers = "^4.57.3"
logging = "^0.4.9.6"
streamlit = "^1.51.0"
fpdf2 = "^2.8.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyter = "^1.1.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
